<resources>
    <string name="app_name">PDD</string>
    <string name="title_activity_timer">Pomodoro Driven Development</string>
    <string name="action_settings">Settings</string>
    <string name="timer_fragment_button_start_text">Start</string>
    <string name="timer_fragment_button_stop_text">Stop</string>

    <string name="notification_active_pomodoro_title">Active Pomodoro</string>
    <string name="notification_active_pomodoro_text">Time until break</string>
    <string name="notification_active_pomodoro_ticker">Time until break</string>
    <string name="notification_active_pomodoro_time_up_title">Time up</string>
    <string name="notification_active_pomodoro_time_up_text">Time to take a break</string>

    <string name="notification_break_title">Break time</string>
    <string name="notification_break_text">Time to start working</string>
    <string name="notification_break_ticker">Time to start working</string>
    <string name="notification_break_time_up_title">Time up</string>
    <string name="notification_break_time_up_text">Time to start working</string>

    <string name="stop_reasons_dialog_title">Why did you stop?</string>
    <string name="stop_reasons_dialog_cancel_text">Undo stop</string>

    <string name="pomodoro_resume_dialog_error_title">There was an error with this pomodoro. What do you want to do?</string>
    <string name="pomodoro_complete_dialog_title">Pomodoro Accomplish?</string>
    <string-array name="pomodoro_error_actions">
        <item>Keep it and discard time</item>
        <item>Keep it and count time</item>
        <item>Discard it</item>
    </string-array>

    <string name="pomodoro_complete_actions_complete">Yes, count it</string>
    <string name="pomodoro_complete_actions_discard">No, discard it</string>
    <string-array name="pomodoro_complete_actions">
        <item>@string/pomodoro_complete_actions_complete</item>
        <item>@string/pomodoro_complete_actions_discard</item>
    </string-array>

    <string name="settings_pomodoro_time_title">Work time</string>
    <string name="settings_pomodoro_time_dialog_title">@string/settings_pomodoro_time_title</string>
    <string name="settings_pomodoro_time_default_value">1500000</string>
    <string-array name="settings_pomodoro_time_list_texts">
        <item>5 seconds</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
        <item>50 minutes</item>
        <item>55 minutes</item>
    </string-array>
    <string-array name="settings_pomodoro_time_list_in_millis">
        <item>5000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1200000</item>
        <item>@string/settings_pomodoro_time_default_value</item>
        <item>1800000</item>
        <item>2100000</item>
        <item>2400000</item>
        <item>2700000</item>
        <item>3000000</item>
        <item>3300000</item>
    </string-array>

    <string name="settings_break_time_title">Break time</string>
    <string name="settings_break_time_dialog_title">@string/settings_break_time_title</string>
    <string name="settings_break_time_default_value">300000</string>
    <string-array name="settings_break_time_list_texts">
        <item>5 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
        <item>11 minutes</item>
        <item>12 minutes</item>
        <item>13 minutes</item>
        <item>14 minutes</item>
        <item>15 minutes</item>
        <item>16 minutes</item>
        <item>17 minutes</item>
        <item>18 minutes</item>
        <item>19 minutes</item>
        <item>20 minutes</item>
    </string-array>
    <string-array name="settings_break_time_list_in_millis">
        <item>5000</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>240000</item>
        <item>@string/settings_break_time_default_value</item>
        <item>360000</item>
        <item>420000</item>
        <item>480000</item>
        <item>540000</item>
        <item>600000</item>
        <item>660000</item>
        <item>720000</item>
        <item>780000</item>
        <item>840000</item>
        <item>900000</item>
        <item>960000</item>
        <item>1020000</item>
        <item>1080000</item>
        <item>1140000</item>
        <item>1200000</item>
    </string-array>
</resources>
